cabal-version:       >=1.10
name:                intro-to-parsing
version:             0.1.0.0
synopsis:            A tutorial which demonstrates the basics of Parsec and goes on to build a SQL query parser.
homepage:            http://jakewheat.github.io/intro_to_parsing
bug-reports:         https://github.com/JakeWheat/intro_to_parsing/issues
license:             BSD3
license-file:        LICENSE
author:              Jake Wheat
maintainer:          jakewheatmail@gmail.com
category:            Text
build-type:          Simple
extra-source-files:  README.asciidoc


library
  exposed-modules:     
  other-extensions:    TupleSections
  build-depends:       base >=4.12 && <4.13,
                       parsec >=3.1 && <3.2,
                       HUnit >=1.6 && <1.7,
                       pretty >=1.1 && <1.2
  default-language:    Haskell2010

